--- a/style.css
+++ b/style.css
@@ -246,7 +246,7 @@ h6.light,
   --heading-color: #fff;
 }
 
-
+/* end of Bootstrap Color Theme */
 /*--------------------------------------------------------------
 /** 1. Base Styles
 --------------------------------------------------------------*/
@@ -1595,6 +1595,7 @@ nav#navbar ul.menu-list {
 /*--------------------------------------------------------------
 /** Testimonials
 --------------------------------------------------------------*/
+
 #testimonial .row {
   display: flex;
   align-items: center; 
