--- a/public/style.css
+++ b/public/style.css
@@ -1186,7 +1186,7 @@ nav#navbar ul.menu-list {
     position: relative;
 }
 .right-element .cart span {
-    background: #BED479;
+    background: #588456;
     padding: 2px 8px;
     position: absolute;
     border-radius: 50%;
@@ -1488,7 +1488,7 @@ body {
 
 #search-input:focus {
   outline: none;
-  border-color: #3D713C;
+  border-color: #588456;
   box-shadow: 0 0 5px rgba(61, 113, 60, 0.5);
 }
 
@@ -1497,7 +1497,7 @@ body {
   margin: 10px auto;
   padding: 10px 20px;
   font-size: 16px;
-  background-color: #3D713C;
+  background-color: #588456;
   color: #fff;
   border: none;
   border-radius: 8px;
@@ -1525,7 +1525,7 @@ body {
 #login-section h2, #signup-section h2 {
   text-align: center;
   margin-bottom: 20px;
-  color: #3D713C;
+  color: #588456;
 }
 
 #login-section form input, #signup-section form input {
@@ -1540,14 +1540,14 @@ body {
 
 #login-section form input:focus, #signup-section form input:focus {
   outline: none;
-  border-color: #3D713C;
+  border-color: #588456;
 }
 
 #login-section form button, #signup-section form button {
   width: 100%;
   padding: 10px;
   font-size: 16px;
-  background-color: #3D713C;
+  background-color: #588456;
   color: #fff;
   border: none;
   border-radius: 8px;
@@ -1556,7 +1556,7 @@ body {
 }
 
 #login-section form button:hover, #signup-section form button:hover {
-  background-color: #2b522c;
+  background-color: #588456;
 }
 
 /* Profile Section */
@@ -1571,7 +1571,7 @@ body {
 }
 
 #profile-section h2, #profile-section h3 {
-  color: #3D713C;
+  color: #588456;
   margin-bottom: 20px;
 }
 
@@ -1586,7 +1586,7 @@ body {
   margin: 10px auto;
   padding: 10px 20px;
   font-size: 16px;
-  background-color: #3D713C; /* Green color */
+  background-color: #588456; /* Green color */
   color: #fff;
   border: none;
   border-radius: 8px;
