--- a/public/style.css
+++ b/public/style.css
@@ -1176,7 +1176,7 @@ nav#navbar ul.menu-list {
 /* Dropdown Menu */
 .user-account .dropdown-menu {
   position: absolute;
-  top: 110%; /* Slightly below the Account button */
+  top: 100%; /* Slightly below the Account button */
   right: 0;
   background-color: #fff;
   border: 1px solid #ccc;
@@ -1697,3 +1697,7 @@ body {
   background-color: #2b522c; /* Darker green on hover */
 }
 
+.post-section{
+  display: flex;
+  justify-content: flex-start;
+}
