Fix the styling

--- a/public/posts.css
+++ b/public/posts.css
@@ -1591,7 +1591,7 @@ body {
   width: 100%;
   padding: 10px;
   font-size: 16px;
-  border: 1px solid #ccc;
+  border: 1px solid #918a8a;
   border-radius: 8px;
   margin-bottom: 20px;
 }
