--- a/views/index.ejs
+++ b/views/index.ejs
@@ -66,7 +66,7 @@
                 <span>User</span>
             </a>
             <div class="dropdown-menu hidden">
-                <a href="/profile"> <button id="go-to-profile">Profile</button></a>
+                 <button id="go-to-profile" >Profile</button>
               <!-- <button id="go-to-profile">Profile</button> -->
               <button id="logout-btn">Logout</button>
             </div>
@@ -85,7 +85,7 @@
     <form id="login-form">
       <input type="text" id="login-username" placeholder="Username" required>
       <input type="password" id="login-password" placeholder="Password" required>
-      <button type="submit">Login</button>
+      <button type="submit" id="login">Login</button>
     </form>
     <button id="go-to-signup">Sign Up</button>
   </section>
