fix button wait issue

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -99,7 +99,7 @@
       <input type="email" id="signup-email" placeholder="Email" required>
       <input type="password" id="signup-password" placeholder="Password" required>
       <input type="file" id="signup-profile-pic" accept="image/*" required>
-      <button type="submit">Sign Up</button>
+      <button type="submit" id="s">Sign Up</button>
     </form>
     <button id="go-to-login">Login</button>
   </section>
